@@ -1,51 +1,76 @@
 package az.edu.ada.wm2.lab6.service;
 
+import az.edu.ada.wm2.lab6.dto.ProductRequestDto;
+import az.edu.ada.wm2.lab6.dto.ProductResponseDto;
+import az.edu.ada.wm2.lab6.mapper.ProductMapper;
+import az.edu.ada.wm2.lab6.model.Category;
 import az.edu.ada.wm2.lab6.model.Product;
+import az.edu.ada.wm2.lab6.repository.CategoryRepository;
 import az.edu.ada.wm2.lab6.repository.ProductRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl implements ProductService {
+
     private final ProductRepository productRepository;
+    private final CategoryRepository categoryRepository;
+    private final ProductMapper productMapper;
 
-    @Autowired
-    public ProductServiceImpl(ProductRepository productRepository) {
+    public ProductServiceImpl(ProductRepository productRepository,
+                              CategoryRepository categoryRepository,
+                              ProductMapper productMapper) {
         this.productRepository = productRepository;
+        this.categoryRepository = categoryRepository;
+        this.productMapper = productMapper;
     }
 
     @Override
-    public Product createProduct(Product product) {
-        if (product.getId() == null) {
-            product.setId(UUID.randomUUID());
-        }
-        return productRepository.save(product);
+    public ProductResponseDto createProduct(ProductRequestDto dto) {
+        Product product = productMapper.toEntity(dto);
+        product.setId(UUID.randomUUID());
+
+        List<Category> categories = categoryRepository.findAllById(dto.getCategoryIds());
+        product.setCategories(categories);
+
+        Product savedProduct = productRepository.save(product);
+        return productMapper.toResponseDto(savedProduct);
     }
 
     @Override
-    public Product getProductById(UUID id) {
-        return productRepository.findById(id)
+    public ProductResponseDto getProductById(UUID id) {
+        Product product = productRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+
+        return productMapper.toResponseDto(product);
     }
 
     @Override
-    public List<Product> getAllProducts() {
-        return productRepository.findAll();
+    public List<ProductResponseDto> getAllProducts() {
+        return productRepository.findAll()
+                .stream()
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 
     @Override
-    public Product updateProduct(UUID id, Product product) {
-        if (!productRepository.existsById(id)) {
-            throw new RuntimeException("Product not found with id: " + id);
-        }
-        product.setId(id);
-        return productRepository.save(product);
+    public ProductResponseDto updateProduct(UUID id, ProductRequestDto dto) {
+        Product existingProduct = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+
+        existingProduct.setProductName(dto.getProductName());
+        existingProduct.setPrice(dto.getPrice());
+        existingProduct.setExpirationDate(dto.getExpirationDate());
+
+        List<Category> categories = categoryRepository.findAllById(dto.getCategoryIds());
+        existingProduct.setCategories(categories);
+
+        Product updatedProduct = productRepository.save(existingProduct);
+        return productMapper.toResponseDto(updatedProduct);
     }
 
     @Override
@@ -57,18 +82,20 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public List<Product> getProductsExpiringBefore(LocalDate date) {
+    public List<ProductResponseDto> getProductsExpiringBefore(LocalDate date) {
         return productRepository.findAll().stream()
-                .filter(product -> product.getExpirationDate() != null && 
-                        product.getExpirationDate().isBefore(date))
-                .collect(Collectors.toList());
+                .filter(product -> product.getExpirationDate() != null
+                        && product.getExpirationDate().isBefore(date))
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 
     @Override
-    public List<Product> getProductsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
+    public List<ProductResponseDto> getProductsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
         return productRepository.findAll().stream()
-                .filter(product -> product.getPrice().compareTo(minPrice) >= 0 && 
-                        product.getPrice().compareTo(maxPrice) <= 0)
-                .collect(Collectors.toList());
+                .filter(product -> product.getPrice().compareTo(minPrice) >= 0
+                        && product.getPrice().compareTo(maxPrice) <= 0)
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 }
